--- a/stylesheets/ubicomp2012.css
+++ b/stylesheets/ubicomp2012.css
@@ -32,9 +32,9 @@ h6 { font-size:13px; }
 /* Blueprint Override
  * ================== */
 .notice {
-  background:#ffc;
+  background:#ff9;
+  border-color:#ff9;
   color:#111;
-  border-color:#ff0;
 }
 
 /* Header
