--- a/stylesheets/ubicomp2012.css
+++ b/stylesheets/ubicomp2012.css
@@ -143,6 +143,36 @@ ul#navbar {
   background-color:#fff;
 }
 
+/* Content
+ * ====== */
+#content {
+  
+}
+
+/* Sidebar
+ * ======= */
+#sidebar {
+  
+}
+
+/* News (Sidebar)
+ * ============== */
+#news ul {
+  list-style:none;
+  margin:0 0 20px;
+  padding:0;
+}
+#news ul > li {
+  margin-bottom:12px;
+  line-height:1.3em;
+}
+  #news ul > li > .date {
+    font-size:11px;
+    color:#999;
+  }
+  
+  
+
 /* Footer
  * ====== */
 footer {
